# UnifiedCamera

./: .gitignore  README.md  build-profile.json5  knowledge-graph-3d.html  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  camera_native.cpp  camera_native.h  image_processor.cpp  image_processor.h  napi_init.cpp
entry/src/main/cpp/types/libentry/: index.d.ts
entry/src/main/ets/camera/: CameraConstants.ets  CameraViewModel.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: CameraPage.ets
entry/src/main/ets/utils/: FileUtils.ets  GlobalContext.ets  PermissionUtils.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/base/profile/: main_pages.json
